// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c7 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c8 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 24px;
  background-color: #222C59;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px rgba(0,0,0,0.14),0px 1px 18px rgba(0,0,0,0.12);
  border-radius: 8px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c12 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: start;
}

.c4 {
  box-sizing: border-box;
  margin-top: 24px;
  width: 100%;
  display: flex;
  justify-content: center;
}

.c5 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 32px;
  background-color: levels.surface;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Trusted Devices
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        width="100%"
      >
        <div
          class="c5 sc-AxirZ c6"
        >
          <div
            class="c7"
            style="text-align: center;"
          >
            <svg
              fill="rgba(255,255,255,0.18)"
              height="150"
              viewBox="0 0 1024 1024"
              width="150"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M179.2 716.8h665.6c42.342 0 76.8-34.458 76.8-76.8v-409.6c0-42.342-34.458-76.8-76.8-76.8h-665.6c-42.342 0-76.8 34.458-76.8 76.8v409.6c0 42.342 34.458 76.8 76.8 76.8zM153.6 230.4c0-14.131 11.469-25.6 25.6-25.6h665.6c14.131 0 25.6 11.469 25.6 25.6v409.6c0 14.131-11.469 25.6-25.6 25.6h-665.6c-14.131 0-25.6-11.469-25.6-25.6v-409.6z"
              />
              <path
                d="M998.4 768h-972.8c-14.131 0-25.6 11.469-25.6 25.6v51.2c0 42.342 34.458 76.8 76.8 76.8h870.4c42.342 0 76.8-34.458 76.8-76.8v-51.2c0-14.131-11.469-25.6-25.6-25.6zM947.2 870.4h-870.4c-14.131 0-25.6-11.469-25.6-25.6v-25.6h921.6v25.6c0 14.131-11.469 25.6-25.6 25.6z"
              />
            </svg>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              Register Trusted Device
            </div>
            <div
              class="c10"
            >
              Device Trust allows Teleport admins to enforce the use of trusted devices. Resources protected by the device mode "required" will enforce the use of a trusted device, in addition to establishing the user's identity and enforcing the necessary roles.
            </div>
            <div
              class="c11"
            >
              Furthermore, users using a trusted device leave audit trails that include the device's information. Please
               
              <a
                class="c12"
                color="text.primary"
                href="https://goteleport.com/docs/access-controls/guides/device-trust/"
                rel="noreferrer"
                target="_blank"
              >
                view our documentation
              </a>
               
              on how to get started with Device Trust.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c3 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c3"
    kind="danger"
  >
    some error message
  </div>
</div>
`;

exports[`loaded 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 40px;
  width: 100%;
}

.c21 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: #FFFFFF;
}

.c18 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c20 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c25 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: start;
}

.c12 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c13 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c15 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c19 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c19 > thead > tr > th,
.c19 > tbody > tr > th,
.c19 > tfoot > tr > th,
.c19 > thead > tr > td,
.c19 > tbody > tr > td,
.c19 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c19 > thead > tr > th:first-child,
.c19 > tbody > tr > th:first-child,
.c19 > tfoot > tr > th:first-child,
.c19 > thead > tr > td:first-child,
.c19 > tbody > tr > td:first-child,
.c19 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c19 > thead > tr > th:last-child,
.c19 > tbody > tr > th:last-child,
.c19 > tfoot > tr > th:last-child,
.c19 > thead > tr > td:last-child,
.c19 > tbody > tr > td:last-child,
.c19 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c19 > tbody > tr > td {
  vertical-align: middle;
}

.c19 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c19 > thead > tr > th .c17 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c19 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c19 tbody tr {
  border-bottom: 1px solid #0C143D;
}

.c19 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c6 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
}

.c5 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c16 {
  background: none;
  border: none;
  cursor: pointer;
}

.c16 .c17 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c16:hover .c17,
.c16:focus .c17 {
  opacity: 1;
}

.c16:disabled {
  cursor: default;
}

.c16:disabled .c17 {
  opacity: 0.1;
}

.c11 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c10 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c8 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c7 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c9 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c9:hover,
.c9:focus,
.c9:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c9::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <nav
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <input
                class="c9"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c10"
              >
                <div
                  class="c11"
                />
              </div>
            </div>
          </div>
          <div
            class="c12"
            width="100%"
          >
            <div
              class="c13"
            >
              <div
                class="c14"
                color="text.primary"
                style="white-space: nowrap; text-transform: uppercase;"
              >
                Showing 
                <strong>
                  1
                </strong>
                 - 
                <strong>
                  3
                </strong>
                 of
                 
                <strong>
                  3
                </strong>
              </div>
            </div>
            <div
              class="c15"
            >
              <button
                class="c16"
                disabled=""
                title="Previous page"
              >
                <span
                  class="c17 c18 icon icon-arrow-left-circle "
                  font-size="3"
                />
              </button>
              <button
                class="c16"
                disabled=""
                title="Next page"
              >
                <span
                  class="c17 c18 icon icon-arrow-right-circle "
                  font-size="3"
                />
              </button>
            </div>
          </div>
        </nav>
        <table
          class="c19"
        >
          <thead>
            <tr>
              <th
                style="cursor: default;"
              >
                OS Type
              </th>
              <th
                style="cursor: default;"
              >
                Asset Tag
              </th>
              <th
                style="cursor: default;"
              >
                Enroll Status
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c17 c20 icon icon-apple "
                  style="padding-right: 5px;"
                />
                 
                macOS
              </td>
              <td>
                CSXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c17 c20 icon icon-linux "
                  style="padding-right: 5px;"
                />
                 
                Linux
              </td>
              <td>
                DSXXXXXXXXX
              </td>
              <td>
                not enrolled
              </td>
            </tr>
            <tr>
              <td
                align="left"
              >
                <span
                  class="c17 c20 icon icon-windows "
                  style="padding-right: 5px;"
                />
                 
                Windows
              </td>
              <td>
                ESXXXXXXXXX
              </td>
              <td>
                enrolled
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="c21"
      color="text.primary"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c22"
      >
        Register Trusted Device
      </div>
      <div
        class="c23"
      >
        Device Trust allows Teleport admins to enforce the use of trusted devices. Resources protected by the device mode "required" will enforce authenticated device access.
      </div>
      <div
        class="c24"
      >
        Please
         
        <a
          class="c25"
          color="text.primary"
          href="https://goteleport.com/docs/access-controls/guides/device-trust/"
          rel="noreferrer"
          target="_blank"
        >
          view our documentation
        </a>
         
        on how to get started with Device Trust.
      </div>
    </div>
  </div>
</div>
`;
